<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.kondisi_jalan.KondisiJalanFragment">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:mapbox_cameraTargetLat="0"
        app:mapbox_cameraTargetLng="118"
        app:mapbox_cameraZoom="2.6" />

    <LinearLayout
        android:id="@+id/ll_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

<!--        <Button-->
<!--            android:id="@+id/btn_navigation"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="24dp"-->
<!--            android:layout_weight="1"-->
<!--            android:background="@color/teal_700"-->
<!--            android:text="Rute"-->
<!--            android:textColor="@android:color/white"-->
<!--            android:visibility="gone"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent" />-->

        <Button
            android:id="@+id/btn_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:layout_weight="1"
            android:background="@color/teal_700"
            android:text="Detail"
            android:textColor="@android:color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:visibility="invisible"
        android:layout_width="28dp"
        android:layout_height="34dp"
        android:layout_gravity="center"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/background_current_loc"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/ll_button"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/iv_current_location"
            android:layout_width="30dp"
            android:layout_height="14dp"
            android:contentDescription="@string/current_location"
            android:src="@drawable/ic_current_location"
            app:layout_constraintBottom_toTopOf="@+id/ll_button"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:background="@drawable/background_search"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingRight="10dp"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/map_view">

        <EditText
            android:id="@+id/edt_cari"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:hint="@string/cari_kondisi_jalan"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColorHint="@color/white" />

        <ImageView
            android:id="@+id/iv_cari"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/cari"
            android:src="@drawable/ic_search" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>